--- a/public/summary_nov_19/aes_global_y2_y3_mds.yml
+++ b/public/summary_nov_19/aes_global_y2_y3_mds.yml
@@ -1,17 +1,19 @@
 ---
 comments: |
-  ## AES Step 1
-  Model: AES Global using *abstractXOR* constraint
-  NbActives ordering : alternatives (nbActives[len-1], nbActives[0], nbActives[len-2], nbActives[1], ...)
-  Heuristic : Dom/WDeg (standard version)
+  Model: AES Global using \emph{abstractXOR} constraint \\
+  NbActives ordering : alternatives (nbActives[len-1], nbActives[0], nbActives[len-2], nbActives[1], ...) \\
+  Heuristic : Dom/WDeg (standard version) \\
+  Heuristic splits : [nbActives, $\Delta$SBoxes, abstractVars*] with abstractVars = [$\Delta$Z, $\Delta$WK] \\
+  Note version:
+  \begin{itemize}
+    \item Fix alternate ordering
+    \item Remove $\Delta$PlainText and $\Delta$CipherText
+  \end{itemize}
 
-  Heuristic splits : [nbActives, $\Delta$SBoxes, abstractVars*]
-  *abstractVars = [$\Delta$PlainText, $\Delta$CipherText, $\Delta Y$, $\Delta Z$] and $\Delta Y$ are a combination of $\Delta$SBoxes.
-
-  Parameters :
-  - [x] $\Delta Y2$, $\Delta Y3$
-  - [x] MDS
-  - [ ] Advanced MDS
+  Parameters : \\
+  \texttt{[x]} $\Delta Y2$, $\Delta Y3$
+  \texttt{[x]} MDS
+  \texttt{[ ]} Advanced MDS
 requirements:
   - name: gradle
     version: 4.9
@@ -28,39 +30,39 @@ shortcuts:
 versioning:
   repository: https://github.com/rloic/thesis-code
   authentication: true
-  commit: f0e016fcff1291c80beb6f775f944753dbdc1cab
+  commit: 14343ad22452d30bd9a666b392a8302d26324742
 compile: 'gradle --build-file {PROJECT}/{gradle_conf} {gradle_task}'
 execute: '{java} {build}/{exec}'
 experiments:
 # AES 128
   - name: AES128-3-5
-    parameters: [version=AES-128, r=3, sb=5, heuristic=dom-wdeg, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
+    parameters: [version=AES-128, r=3, sb=5, heuristic=dom-wdeg, order=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
   - name: AES128-4-12
-    parameters: [version=AES-128, r=4, sb=12, heuristic=dom-wdeg, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
+    parameters: [version=AES-128, r=4, sb=12, heuristic=dom-wdeg, order=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
     level: 1
 # AES 192
   - name: AES192-3-1
-    parameters: [version=AES-192, r=3, sb=1, heuristic=dom-wdeg, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
+    parameters: [version=AES-192, r=3, sb=1, heuristic=dom-wdeg, order=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
   - name: AES192-4-4
-    parameters: [version=AES-192, r=4, sb=4, heuristic=dom-wdeg, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
+    parameters: [version=AES-192, r=4, sb=4, heuristic=dom-wdeg, order=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
   - name: AES192-5-5
-    parameters: [version=AES-192, r=5, sb=5, heuristic=dom-wdeg, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
+    parameters: [version=AES-192, r=5, sb=5, heuristic=dom-wdeg, order=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
   - name: AES192-6-10
-    parameters: [version=AES-192, r=6, sb=10, heuristic=dom-wdeg, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
+    parameters: [version=AES-192, r=6, sb=10, heuristic=dom-wdeg, order=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
     level: 1
 # AES 256
   - name: AES256-3-1
-    parameters: [version=AES-256, r=3, sb=1, heuristic=dom-wdeg, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
+    parameters: [version=AES-256, r=3, sb=1, heuristic=dom-wdeg, order=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
   - name: AES256-4-3
-    parameters: [version=AES-256, r=4, sb=3, heuristic=dom-wdeg, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
+    parameters: [version=AES-256, r=4, sb=3, heuristic=dom-wdeg, order=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
   - name: AES256-5-3
-    parameters: [version=AES-256, r=5, sb=3, heuristic=dom-wdeg, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
+    parameters: [version=AES-256, r=5, sb=3, heuristic=dom-wdeg, order=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
   - name: AES256-6-5
-    parameters: [version=AES-256, r=6, sb=5, heuristic=dom-wdeg, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
+    parameters: [version=AES-256, r=6, sb=5, heuristic=dom-wdeg, order=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
   - name: AES256-7-5
-    parameters: [version=AES-256, r=7, sb=5, heuristic=dom-wdeg, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
+    parameters: [version=AES-256, r=7, sb=5, heuristic=dom-wdeg, order=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
   - name: AES256-8-10
-    parameters: [version=AES-256, r=8, sb=10, heuristic=dom-wdeg, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
+    parameters: [version=AES-256, r=8, sb=10, heuristic=dom-wdeg, order=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=false]
     level: 1
 measures: ['#s', '#dc'] #s = nb solutions, #dc = nb decision points
 stats: [time]
