--- a/public/summary_nov_19/aes_global_full_custom.yml
+++ b/public/summary_nov_19/aes_global_full_custom.yml
@@ -1,18 +1,25 @@
 ---
 comments: |
-  ## AES Step 1
-  Model: AES Global using *abstractXOR* constraint
-  NbActives ordering : alternatives (nbActives[len-1], nbActives[0], nbActives[len-2], nbActives[1], ...)
-  Heuristic : Custom
-    The current heuristic is an adaptation of Dom/WDeg. Each variables contains the list of it propagators, when a variable
-    belongs to a failure, for each propagator that belongs to the variable, we test if it's violated., if true we increment it weight.
-    The weight of a variable if the sum of the weight of it propagator / it domain size.
-  Heuristic splits : [nbActives, $\Delta$SBoxes, abstractVars*]
-  *abstractVars = [$\Delta$PlainText, $\Delta$CipherText, $\Delta Y$, $\Delta Z$] and $\Delta Y$ are a combination of $\Delta$SBoxes.
-  Parameters :
-  - [x] $\Delta Y2$, $\Delta Y3$
-  - [x] MDS
-  - [x] Advanced MDS
+  Model: AES Global using \emph{abstractXOR} constraint \\
+  NbActives ordering : Natural (nbActives[0], nbActives[1], nbActives[2], ...) \\
+  Heuristic : Custom \\
+  The current heuristic is a derivate of Dom/WDeg. The main problem with Dom/WDeg is that the strategy do not exploit
+  the sub equations of the global constraint \textit{abstractXOR}. To fix this, the abstractXOR propagator records the map of
+  variable to equation that indicates in what equations the variable belongs to. When the abstractXOR propagate a variable,
+  it renders public the list of equation of the current variable. Then, if there is a contradiction, the WDeg will increments
+  the weight of the initial equations of the variable instead of increment the weight of the abstractXOR propagator. \\
+  Heuristic splits : [nbActives, $\Delta$SBoxes, abstractVars*] with abstractVars = [$\Delta$Z, $\Delta$WK] \\~\\
+  Note version:
+  \begin{itemize}
+    \item Fix alternate ordering
+    \item Remove $\Delta$PlainText and $\Delta$CipherText
+    \item Change of WDeg implementation
+  \end{itemize}
+
+  Parameters : \\
+  \texttt{[x]} $\Delta Y2$, $\Delta Y3$ \\
+  \texttt{[x]} MDS \\
+  \texttt{[x]} Advanced MDS
 requirements:
   - name: gradle
     version: 4.9
@@ -20,48 +27,48 @@ requirements:
     version: 1.8
 path: '{FILE}/src'
 shortcuts:
-  gradle_conf: 'build_aes.gradle'
+  gradle_conf: 'build_exp.gradle'
   gradle_task: 'jar'
-  exec: 'AES-1.0-SNAPSHOT.jar'
+  exec: 'Experiment-1.0-SNAPSHOT.jar'
   build: '{PROJECT}/build/libs'
   jvm_args: '-Xmx16g -Duser.country=UK -Duser.language=en'
   java: 'java {jvm_args} -jar'
 versioning:
   repository: https://github.com/rloic/thesis-code
   authentication: true
-  commit: f0e016fcff1291c80beb6f775f944753dbdc1cab
+  commit: 829aca09d098e451617c0d66c122b93002685cc1
 compile: 'gradle --build-file {PROJECT}/{gradle_conf} {gradle_task}'
 execute: '{java} {build}/{exec}'
 experiments:
 # AES 128
   - name: AES128-3-5
-    parameters: [version=AES-128, r=3, sb=5, heuristic=custom, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=true]
+    parameters: [version=AES-128, r=3, sb=5, heuristic=Custom, order=Natural, restarts=0, ENABLE_Y2_Y3=1, ENABLE_MDS=1, ENABLE_ADVANCED_MDS=1]
   - name: AES128-4-12
-    parameters: [version=AES-128, r=4, sb=12, heuristic=custom, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=true]
+    parameters: [version=AES-128, r=4, sb=12, heuristic=Custom, order=Natural, restarts=0, ENABLE_Y2_Y3=1, ENABLE_MDS=1, ENABLE_ADVANCED_MDS=1]
     level: 1
 # AES 192
   - name: AES192-3-1
-    parameters: [version=AES-192, r=3, sb=1, heuristic=custom, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=true]
+    parameters: [version=AES-192, r=3, sb=1, heuristic=Custom, order=Natural, restarts=0, ENABLE_Y2_Y3=1, ENABLE_MDS=1, ENABLE_ADVANCED_MDS=1]
   - name: AES192-4-4
-    parameters: [version=AES-192, r=4, sb=4, heuristic=custom, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=true]
+    parameters: [version=AES-192, r=4, sb=4, heuristic=Custom, order=Natural, restarts=0, ENABLE_Y2_Y3=1, ENABLE_MDS=1, ENABLE_ADVANCED_MDS=1]
   - name: AES192-5-5
-    parameters: [version=AES-192, r=5, sb=5, heuristic=custom, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=true]
+    parameters: [version=AES-192, r=5, sb=5, heuristic=Custom, order=Natural, restarts=0, ENABLE_Y2_Y3=1, ENABLE_MDS=1, ENABLE_ADVANCED_MDS=1]
   - name: AES192-6-10
-    parameters: [version=AES-192, r=6, sb=10, heuristic=custom, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=true]
+    parameters: [version=AES-192, r=6, sb=10, heuristic=Custom, order=Natural, restarts=0, ENABLE_Y2_Y3=1, ENABLE_MDS=1, ENABLE_ADVANCED_MDS=1]
     level: 1
 # AES 256
   - name: AES256-3-1
-    parameters: [version=AES-256, r=3, sb=1, heuristic=custom, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=true]
+    parameters: [version=AES-256, r=3, sb=1, heuristic=Custom, order=Natural, restarts=0, ENABLE_Y2_Y3=1, ENABLE_MDS=1, ENABLE_ADVANCED_MDS=1]
   - name: AES256-4-3
-    parameters: [version=AES-256, r=4, sb=3, heuristic=custom, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=true]
+    parameters: [version=AES-256, r=4, sb=3, heuristic=Custom, order=Natural, restarts=0, ENABLE_Y2_Y3=1, ENABLE_MDS=1, ENABLE_ADVANCED_MDS=1]
   - name: AES256-5-3
-    parameters: [version=AES-256, r=5, sb=3, heuristic=custom, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=true]
+    parameters: [version=AES-256, r=5, sb=3, heuristic=Custom, order=Natural, restarts=0, ENABLE_Y2_Y3=1, ENABLE_MDS=1, ENABLE_ADVANCED_MDS=1]
   - name: AES256-6-5
-    parameters: [version=AES-256, r=6, sb=5, heuristic=custom, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=true]
+    parameters: [version=AES-256, r=6, sb=5, heuristic=Custom, order=Natural, restarts=0, ENABLE_Y2_Y3=1, ENABLE_MDS=1, ENABLE_ADVANCED_MDS=1]
   - name: AES256-7-5
-    parameters: [version=AES-256, r=7, sb=5, heuristic=custom, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=true]
+    parameters: [version=AES-256, r=7, sb=5, heuristic=Custom, order=Natural, restarts=0, ENABLE_Y2_Y3=1, ENABLE_MDS=1, ENABLE_ADVANCED_MDS=1]
   - name: AES256-8-10
-    parameters: [version=AES-256, r=8, sb=10, heuristic=custom, ordering=alternate, restarts=0, enableY2_Y3=true, enable_mds=true, enable_advanced_mds=true]
+    parameters: [version=AES-256, r=8, sb=10, heuristic=Custom, order=Natural, restarts=0, ENABLE_Y2_Y3=1, ENABLE_MDS=1, ENABLE_ADVANCED_MDS=1]
     level: 1
 measures: ['#s', '#dc'] #s = nb solutions, #dc = nb decision points
 stats: [time]
