--- a/public/summary_nov_19/full_steps/global.yml
+++ b/public/summary_nov_19/full_steps/global.yml
@@ -11,16 +11,17 @@ comments: |
   \begin{itemize}
     \item nbActives: The number of active sBoxes for each round $i$
     \item $\Delta$SBoxes: The abstraction of the sBoxes
-    \item abstractVars: The abstract vars, the problem abstraction variables ($\Delta Z$ and $\Delta WK$)
-    \item abstractXorVars: The variables that belong to the global xor constraint
     \item probabilities: The probabilities linked to the SBoxes
     \item $\delta$SBoxes: The concrete value (byte level) of the sBoxes
     \item variables that require instantiation: $\delta$PlainText, $\delta$CipherText, $\delta$X, $\delta$SX, $\delta$Y, $\delta$Z and $\delta$WK.
   \end{itemize}
   Remark: \\
     Advanced mds is enable for AES-3-5 to avoid massive exploration of the concrete part of the search tree. The reverse mix column
-    operation is used as the mds property. For advanced MDS, we limit the number of interation by setting LIMIT_ADVANCED_MDS_GENERATION=4.
-    This parameter indicates that advanced mds is enabled for the first four rounds.
+    operation is used as the mds property. For advanced MDS, we limit the number of interation by setting LIMIT_ADVANCED_MDS_GENERATION=3.
+    This parameter indicates that advanced mds is enabled for the first four rounds. The advanced MDS property seems to be usefull when the
+    number of active sboxes is not bounded by nbActives[i].
+  Version note: \\
+    Improve heuristic (better performance in both times and nodes)
 requirements:
   - name: gradle
     version: 4.9
@@ -37,71 +38,71 @@ shortcuts:
 versioning:
   repository: https://github.com/rloic/thesis-code
   authentication: true
-  commit: f5057ac4b90c43836ffd119742e1a0400adbb63c
+  commit: f48feea68d5231fc3984f3b6f39bbf80570d9584
 compile: 'gradle --build-file {PROJECT}/{gradle_conf} {gradle_task}'
 execute: '{java} {build}/{exec}'
 experiments:
 # AES 128
   - name: AES128-3-5
-    parameters: [version=AES-128, r=3, sb=5, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1]
+    parameters: [version=AES-128, r=3, sb=5, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=3]
   - name: AES128-4-12
-    parameters: [version=AES-128, r=4, sb=12, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1]
+    parameters: [version=AES-128, r=4, sb=12, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=3]
     level: 1
   - name: AES128-5-17
-    parameters: [version=AES-128, r=5, sb=17, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1]
+    parameters: [version=AES-128, r=5, sb=17, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=3]
     level: 2
 # AES 192
   - name: AES192-3-1
-    parameters: [version=AES-192, r=3, sb=1, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1]
+    parameters: [version=AES-192, r=3, sb=1, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
   - name: AES192-4-4
-    parameters: [version=AES-192, r=4, sb=4, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1]
+    parameters: [version=AES-192, r=4, sb=4, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
   - name: AES192-5-5
-    parameters: [version=AES-192, r=5, sb=5, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1]
+    parameters: [version=AES-192, r=5, sb=5, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
   - name: AES192-6-10
-    parameters: [version=AES-192, r=6, sb=10, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=4]
+    parameters: [version=AES-192, r=6, sb=10, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
   - name: AES192-7-13
-    parameters: [version=AES-192, r=7, sb=13, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=4]
+    parameters: [version=AES-192, r=7, sb=13, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
     level: 1
   - name: AES192-8-18
-    parameters: [version=AES-192, r=8, sb=18, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=4]
+    parameters: [version=AES-192, r=8, sb=18, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
     level: 1
   - name: AES192-9-24
-    parameters: [version=AES-192, r=9, sb=24, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=4]
+    parameters: [version=AES-192, r=9, sb=24, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
     level: 2
   - name: AES192-10-27
-    parameters: [version=AES-192, r=9, sb=24, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=4]
+    parameters: [version=AES-192, r=9, sb=24, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
     level: 2
 # AES 256
   - name: AES256-3-1
-    parameters: [version=AES-256, r=3, sb=1, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1]
+    parameters: [version=AES-256, r=3, sb=1, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
   - name: AES256-4-3
-    parameters: [version=AES-256, r=4, sb=3, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1]
+    parameters: [version=AES-256, r=4, sb=3, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
   - name: AES256-5-3
-    parameters: [version=AES-256, r=5, sb=3, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1]
+    parameters: [version=AES-256, r=5, sb=3, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
   - name: AES256-6-5
-    parameters: [version=AES-256, r=6, sb=5, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=4]
+    parameters: [version=AES-256, r=6, sb=5, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
   - name: AES256-7-5
-    parameters: [version=AES-256, r=7, sb=5, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=4]
+    parameters: [version=AES-256, r=7, sb=5, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
   - name: AES256-8-10
-    parameters: [version=AES-256, r=8, sb=10, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=4]
+    parameters: [version=AES-256, r=8, sb=10, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
     level: 1
   - name: AES256-9-15
-    parameters: [version=AES-256, r=9, sb=15, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=4]
+    parameters: [version=AES-256, r=9, sb=15, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
     level: 1
   - name: AES256-10-16
-    parameters: [version=AES-256, r=10, sb=16, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=4]
+    parameters: [version=AES-256, r=10, sb=16, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
     level: 1
   - name: AES256-11-20
-    parameters: [version=AES-256, r=11, sb=20, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=4]
+    parameters: [version=AES-256, r=11, sb=20, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
     level: 2
   - name: AES256-12-20
-    parameters: [version=AES-256, r=12, sb=20, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=4]
+    parameters: [version=AES-256, r=12, sb=20, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
     level: 2
   - name: AES256-13-24
-    parameters: [version=AES-256, r=13, sb=24, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=4]
+    parameters: [version=AES-256, r=13, sb=24, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
     level: 2
   - name: AES256-14-24
-    parameters: [version=AES-256, r=14, sb=24, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=1, LIMIT_ADVANCED_MDS_GENERATION=4]
+    parameters: [version=AES-256, r=14, sb=24, heuristic=Custom, order=Alternate, restarts=0, ENABLE_MDS=1, ENABLE_REVERSE_MC=1, ENABLE_ADVANCED_MDS=0]
     level: 2
 measures: ['p', '#s', '#dc'] # p = probability, s = nb solutions, #dc = nb decision points
 stats: [time]
