--- a/public/2020-01/midori/differential/full/global_xor.yml
+++ b/public/2020-01/midori/differential/full/global_xor.yml
@@ -22,14 +22,14 @@ shortcuts:
 versioning:
   repository: https://github.com/rloic/thesis-code
   authentication: true
-  commit: 31102c3869acde8ba4ddeeb117ca0838c79308d7
+  commit: e66e511e950c726dcad25130332851cc569d52da
 compile: 'gradle --build-file {PROJECT}/{gradle_conf} {gradle_task}'
 execute: '{java} {build}/{exec} com.github.rloic.kt.midori.app.concrete.DifferentialKt'
 experiments:
   - name: "Midori-64"
-    parameters: [version=Midori-64, r=20, sb=32, heuristic=Custom, INCREMENTAL=true]
+    parameters: [model=GlobalXOR, version=Midori-64, r=20, sb=32, heuristic=Custom, INCREMENTAL=true]
   - name: "Midori-128"
-    parameters: [version=Midori-128, r=20, sb=64, heuristic=Custom, INCREMENTAL=true]
+    parameters: [model=GlobalXOR, version=Midori-128, r=20, sb=64, heuristic=Custom, INCREMENTAL=true]
 measures: []
 stats: [time]
 iterations: 1
