--- a/public/2020-01/midori/differential/full/advanced.yml
+++ b/public/2020-01/midori/differential/full/advanced.yml
@@ -19,14 +19,14 @@ shortcuts:
 versioning:
   repository: https://github.com/rloic/thesis-code
   authentication: true
-  commit: cd0579649984010eacaf30d5016dfbf22998f5ff
+  commit: e66e511e950c726dcad25130332851cc569d52da
 compile: 'gradle --build-file {PROJECT}/{gradle_conf} {gradle_task}'
 execute: '{java} {build}/{exec} com.github.rloic.kt.midori.app.concrete.DifferentialKt'
 experiments:
   - name: "Midori-64"
-    parameters: [version=Midori-64, r=20, sb=32, heuristic=Dom_WDeg, INCREMENTAL=true]
+    parameters: [model=Advanced, version=Midori-64, r=20, sb=32, heuristic=Dom_WDeg, INCREMENTAL=true]
   - name: "Midori-128"
-    parameters: [version=Midori-128, r=20, sb=64, heuristic=Dom_WDeg, INCREMENTAL=true]
+    parameters: [model=Advanced, version=Midori-128, r=20, sb=64, heuristic=Dom_WDeg, INCREMENTAL=true]
 measures: []
 stats: [time]
 iterations: 1
