--- a/public/2020/01/midori/differential/truncated/advanced.yml
+++ b/public/2020/01/midori/differential/truncated/advanced.yml
@@ -1,6 +1,6 @@
 ---
 comments: |
-  Model: Midori Basic Model \\
+  Model: Midori Advanced Model \\
   Note version: \\
     Add Midori 64 bits
 requirements:
@@ -19,17 +19,17 @@ shortcuts:
 versioning:
   repository: https://github.com/rloic/thesis-code
   authentication: true
-  commit: e66e511e950c726dcad25130332851cc569d52da
+  commit: c76598300b061db43d2c0093ada3908e250dbda4
 compile: 'gradle --build-file {PROJECT}/{gradle_conf} {gradle_task}'
-execute: '{java} {build}/{exec} com.github.rloic.kt.midori.app.concrete.DifferentialKt'
+execute: '{java} {build}/{exec} com.github.rloic.kt.midori.app.truncated.DifferentialKt'
 experiments:
   - name: "Midori-64"
-    parameters: [model=Basic, version=Midori-64, r=20, sb=32, heuristic=Dom_WDeg, INCREMENTAL=true]
+    parameters: [model=Advanced, version=Midori-64, r=20, sb=32, heuristic=Dom_WDeg, INCREMENTAL=true]
   - name: "Midori-128"
-    parameters: [model=Basic, version=Midori-128, r=20, sb=64, heuristic=Dom_WDeg, INCREMENTAL=true]
+    parameters: [model=Advanced, version=Midori-128, r=20, sb=64, heuristic=Dom_WDeg, INCREMENTAL=true]
 measures: []
 stats: [time]
 iterations: 1
 timeout:
-  duration: 48
+  duration: 24
   unit: HOURS
