--- a/public/2020/01/midori/differential/truncated/global_xor.yml
+++ b/public/2020/01/midori/differential/truncated/global_xor.yml
@@ -1,7 +1,10 @@
 ---
 comments: |
-  Model: Midori Advanced Model \\
+  Model: Midori Global XOR \\
   Note version: \\
+    Start values at the minimal value of the previous round \\
+    I had plain text and cipher text blocks to the problem resolution, global xor is able to perform stronger filtering
+    with this additionnal information.
     Add Midori 64 bits
 requirements:
   - name: gradle
@@ -19,17 +22,17 @@ shortcuts:
 versioning:
   repository: https://github.com/rloic/thesis-code
   authentication: true
-  commit: e66e511e950c726dcad25130332851cc569d52da
+  commit: c76598300b061db43d2c0093ada3908e250dbda4
 compile: 'gradle --build-file {PROJECT}/{gradle_conf} {gradle_task}'
-execute: '{java} {build}/{exec} com.github.rloic.kt.midori.app.concrete.DifferentialKt'
+execute: '{java} {build}/{exec} com.github.rloic.kt.midori.app.truncated.DifferentialKt'
 experiments:
   - name: "Midori-64"
-    parameters: [model=Advanced, version=Midori-64, r=20, sb=32, heuristic=Dom_WDeg, INCREMENTAL=true]
+    parameters: [model=GlobalXOR, version=Midori-64, r=20, sb=32, heuristic=Custom, INCREMENTAL=true]
   - name: "Midori-128"
-    parameters: [model=Advanced, version=Midori-128, r=20, sb=64, heuristic=Dom_WDeg, INCREMENTAL=true]
+    parameters: [model=GlobalXOR, version=Midori-128, r=20, sb=64, heuristic=Custom, INCREMENTAL=true]
 measures: []
 stats: [time]
 iterations: 1
 timeout:
-  duration: 48
+  duration: 24
   unit: HOURS
