--- a/public/2020/01/midori/related_key/truncated/advanced.yml
+++ b/public/2020/01/midori/related_key/truncated/advanced.yml
@@ -19,85 +19,77 @@ shortcuts:
 versioning:
   repository: https://github.com/rloic/thesis-code
   authentication: true
-  commit: c76598300b061db43d2c0093ada3908e250dbda4
+  commit: f290f76a487069ef43224cb0d134b4ec6f7ca69b
 compile: 'gradle --build-file {PROJECT}/{gradle_conf} {gradle_task}'
 execute: '{java} {build}/{exec} com.github.rloic.kt.midori.app.truncated.RelatedKeyDifferentialPathKt'
 experiments:
-  - name: "Midori-64_3_3"
-    parameters: [model=Advanced, version=Midori-64, r=3, sb=3, heuristic=Dom_WDeg]
-  - name: "Midori-64_4_4"
-    parameters: [model=Advanced, version=Midori-64, r=4, sb=4, heuristic=Dom_WDeg]
-  - name: "Midori-64_5_5"
-    parameters: [model=Advanced, version=Midori-64, r=5, sb=5, heuristic=Dom_WDeg]
-  - name: "Midori-64_6_6"
-    parameters: [model=Advanced, version=Midori-64, r=6, sb=6, heuristic=Dom_WDeg]
-  - name: "Midori-64_7_7"
-    parameters: [model=Advanced, version=Midori-64, r=7, sb=7, heuristic=Dom_WDeg]
-  - name: "Midori-64_8_8"
-    parameters: [model=Advanced, version=Midori-64, r=8, sb=8, heuristic=Dom_WDeg]
-  - name: "Midori-64_9_9"
-    parameters: [model=Advanced, version=Midori-64, r=9, sb=9, heuristic=Dom_WDeg]
-  - name: "Midori-64_10_10"
-    parameters: [model=Advanced, version=Midori-64, r=10, sb=10, heuristic=Dom_WDeg]
-  - name: "Midori-64_11_11"
-    parameters: [model=Advanced, version=Midori-64, r=11, sb=11, heuristic=Dom_WDeg]
-  - name: "Midori-64_12_12"
-    parameters: [model=Advanced, version=Midori-64, r=12, sb=12, heuristic=Dom_WDeg]
-  - name: "Midori-64_13_13"
-    parameters: [model=Advanced, version=Midori-64, r=13, sb=13, heuristic=Dom_WDeg]
-  - name: "Midori-64_14_14"
-    parameters: [model=Advanced, version=Midori-64, r=14, sb=14, heuristic=Dom_WDeg]
-  - name: "Midori-64_15_15"
-    parameters: [model=Advanced, version=Midori-64, r=15, sb=15, heuristic=Dom_WDeg]
-  - name: "Midori-64_16_16"
-    parameters: [model=Advanced, version=Midori-64, r=16, sb=16, heuristic=Dom_WDeg]
-  - name: "Midori-64_17_17"
-    parameters: [model=Advanced, version=Midori-64, r=17, sb=17, heuristic=Dom_WDeg]
-  - name: "Midori-64_18_18"
-    parameters: [model=Advanced, version=Midori-64, r=18, sb=18, heuristic=Dom_WDeg]
-  - name: "Midori-64_19_19"
-    parameters: [model=Advanced, version=Midori-64, r=19, sb=19, heuristic=Dom_WDeg]
-  - name: "Midori-64_20_20"
-    parameters: [model=Advanced, version=Midori-64, r=20, sb=20, heuristic=Dom_WDeg]
+  - name: "Midori-64_3_1"
+    parameters: [model=Advanced, version=Midori-64, r=3, sb=1]
+  - name: "Midori-64_4_2"
+    parameters: [model=Advanced, version=Midori-64, r=4, sb=2]
+  - name: "Midori-64_5_2"
+    parameters: [model=Advanced, version=Midori-64, r=5, sb=2]
+  - name: "Midori-64_6_3"
+    parameters: [model=Advanced, version=Midori-64, r=6, sb=3]
+  - name: "Midori-64_7_3"
+    parameters: [model=Advanced, version=Midori-64, r=7, sb=3]
+  - name: "Midori-64_8_4"
+    parameters: [model=Advanced, version=Midori-64, r=8, sb=4]
+  - name: "Midori-64_9_4"
+    parameters: [model=Advanced, version=Midori-64, r=9, sb=4]
+  - name: "Midori-64_10_5"
+    parameters: [model=Advanced, version=Midori-64, r=10, sb=5]
+  - name: "Midori-64_11_5"
+    parameters: [model=Advanced, version=Midori-64, r=11, sb=5]
+  - name: "Midori-64_12_6"
+    parameters: [model=Advanced, version=Midori-64, r=12, sb=6]
+  - name: "Midori-64_13_6"
+    parameters: [model=Advanced, version=Midori-64, r=13, sb=6]
+  - name: "Midori-64_14_7"
+    parameters: [model=Advanced, version=Midori-64, r=14, sb=7]
+  - name: "Midori-64_15_7"
+    parameters: [model=Advanced, version=Midori-64, r=15, sb=7]
+  - name: "Midori-64_16_8"
+    parameters: [model=Advanced, version=Midori-64, r=16, sb=8]
   - name: "Midori-128_3_3"
-    parameters: [model=Advanced, version=Midori-128, r=3, sb=3, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=3, sb=3]
   - name: "Midori-128_4_4"
-    parameters: [model=Advanced, version=Midori-128, r=4, sb=4, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=4, sb=4]
   - name: "Midori-128_5_5"
-    parameters: [model=Advanced, version=Midori-128, r=5, sb=5, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=5, sb=5]
   - name: "Midori-128_6_6"
-    parameters: [model=Advanced, version=Midori-128, r=6, sb=6, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=6, sb=6]
   - name: "Midori-128_7_7"
-    parameters: [model=Advanced, version=Midori-128, r=7, sb=7, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=7, sb=7]
   - name: "Midori-128_8_8"
-    parameters: [model=Advanced, version=Midori-128, r=8, sb=8, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=8, sb=8]
   - name: "Midori-128_9_9"
-    parameters: [model=Advanced, version=Midori-128, r=9, sb=9, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=9, sb=9]
   - name: "Midori-128_10_10"
-    parameters: [model=Advanced, version=Midori-128, r=10, sb=10, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=10, sb=10]
   - name: "Midori-128_11_11"
-    parameters: [model=Advanced, version=Midori-128, r=11, sb=11, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=11, sb=11]
   - name: "Midori-128_12_12"
-    parameters: [model=Advanced, version=Midori-128, r=12, sb=12, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=12, sb=12]
   - name: "Midori-128_13_13"
-    parameters: [model=Advanced, version=Midori-128, r=13, sb=13, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=13, sb=13]
   - name: "Midori-128_14_14"
-    parameters: [model=Advanced, version=Midori-128, r=14, sb=14, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=14, sb=14]
   - name: "Midori-128_15_15"
-    parameters: [model=Advanced, version=Midori-128, r=15, sb=15, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=15, sb=15]
   - name: "Midori-128_16_16"
-    parameters: [model=Advanced, version=Midori-128, r=16, sb=16, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=16, sb=16]
   - name: "Midori-128_17_17"
-    parameters: [model=Advanced, version=Midori-128, r=17, sb=17, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=17, sb=17]
   - name: "Midori-128_18_18"
-    parameters: [model=Advanced, version=Midori-128, r=18, sb=18, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=18, sb=18]
   - name: "Midori-128_19_19"
-    parameters: [model=Advanced, version=Midori-128, r=19, sb=19, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=19, sb=19]
   - name: "Midori-128_20_20"
-    parameters: [model=Advanced, version=Midori-128, r=20, sb=20, heuristic=Dom_WDeg]
+    parameters: [model=Advanced, version=Midori-128, r=20, sb=20]
 measures: ['#s', '#dc'] # p = probability, s = nb solutions, #dc = nb decision points
 stats: [time]
 iterations: 1
 timeout:
-  duration: 24
+  duration: 12
   unit: HOURS
