Update Midori Benchmarks

--- a/public/2020/01/midori/differential/concrete/sat.yml
+++ b/public/2020/01/midori/differential/concrete/sat.yml
@@ -10,9 +10,9 @@ requirements:
     version: 1.8
   - name: python
     version: 3.8
-path: '{FILE}/src'
+dev_path: '/home/rloic/IdeaProjects/thesis-code'
 shortcuts:
-  dl_picat: 'python3 {PROJECT}/picat/download.py'
+  download_librairies: 'python3 {PROJECT}/sat/download.py'
   gradle_conf: 'build_exp.gradle'
   gradle_task: 'jar'
   exec: 'Experiment-1.0-SNAPSHOT.jar'
@@ -20,21 +20,23 @@ shortcuts:
   jvm_args: '-Xmx16g -Duser.country=UK -Duser.language=en'
   java: 'java {jvm_args} -cp'
   main_class: 'com.github.rloic.kt.midori.app.concrete.DifferentialSATKt'
-  PICAT_PATH: '{PROJECT}/picat'
+  PROJECT_PATH: '{PROJECT}'
+  PICAT_PATH: '{PROJECT}/sat/Picat'
+  MINIZINC_PATH: '{PROJECT}/sat/MiniZincIDE-2.2.3-bundle-linux'
 versioning:
   repository: https://github.com/rloic/thesis-code
   authentication: true
-  commit: e820197d5cd8f54cf37066adea511723c6d7efa0
-compile: '{dl_picat} && gradle --build-file {PROJECT}/{gradle_conf} {gradle_task}'
+  commit: 268e72ee0d98aea7f271da7b051af286d94fcef2
+compile: '{download_librairies} && gradle --build-file {PROJECT}/{gradle_conf} {gradle_task}'
 execute: '{java} {build}/{exec} {main_class}'
 experiments:
   - name: "Midori-64"
-    parameters: [version=Midori-64, r=20, sb=32, INCREMENTAL=1, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-64, r=16, sb=32, INCREMENTAL=1, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128"
-    parameters: [version=Midori-128, r=20, sb=64, INCREMENTAL=1, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=20, sb=64, INCREMENTAL=1, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
 measures: []
 stats: [time]
 iterations: 1
 timeout:
-  duration: 24
+  duration: 12
   unit: HOURS
