--- a/public/2020/01/midori/differential/concrete/global_xor.yml
+++ b/public/2020/01/midori/differential/concrete/global_xor.yml
@@ -11,7 +11,7 @@ requirements:
     version: 4.9
   - name: java
     version: 1.8
-path: '{FILE}/src'
+dev_path: '/home/rloic/IdeaProjects/thesis-code'
 shortcuts:
   gradle_conf: 'build_exp.gradle'
   gradle_task: 'jar'
@@ -22,7 +22,7 @@ shortcuts:
 versioning:
   repository: https://github.com/rloic/thesis-code
   authentication: true
-  commit: c76598300b061db43d2c0093ada3908e250dbda4
+  commit: 268e72ee0d98aea7f271da7b051af286d94fcef2
 compile: 'gradle --build-file {PROJECT}/{gradle_conf} {gradle_task}'
 execute: '{java} {build}/{exec} com.github.rloic.kt.midori.app.concrete.DifferentialKt'
 experiments:
@@ -34,5 +34,5 @@ measures: []
 stats: [time]
 iterations: 1
 timeout:
-  duration: 24
+  duration: 12
   unit: HOURS
