--- a/public/2020/01/midori/differential/truncated/sat.yml
+++ b/public/2020/01/midori/differential/truncated/sat.yml
@@ -10,21 +10,24 @@ requirements:
     version: 1.8
   - name: python
     version: 3.8
-path: '{FILE}/src'
+dev_path: '/home/rloic/IdeaProjects/thesis-code'
+shortcuts:
+  PICAT_PATH: '{PROJECT}/sat/Picat'
+  MINIZINC_PATH: '{PROJECT}/sat/MiniZincIDE-2.2.3-bundle-linux'
 versioning:
   repository: https://github.com/rloic/thesis-code
   authentication: true
-  commit: c76598300b061db43d2c0093ada3908e250dbda4
-compile: 'python3 {PROJECT}/picat/download.py'
-execute: 'python3 {PROJECT}/picat/midori_diff.py'
+  commit: 268e72ee0d98aea7f271da7b051af286d94fcef2
+compile: 'python3 {PROJECT}/sat/download.py'
+execute: 'python3 {PROJECT}/sat/differential.py'
 experiments:
   - name: "Midori-64"
-    parameters: [version=Midori-64]
+    parameters: [version=64, r=16, sb=32, 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128"
-    parameters: [version=Midori-128]
+    parameters: [version=128, r=20, sb=64, 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
 measures: []
 stats: [time]
 iterations: 1
 timeout:
-  duration: 24
+  duration: 12
   unit: HOURS
