--- a/public/2020/01/midori/related_key/concrete/sat.yml
+++ b/public/2020/01/midori/related_key/concrete/sat.yml
@@ -10,9 +10,9 @@ requirements:
     version: 1.8
   - name: python
     version: 3.8
-path: '{FILE}/src'
+dev_path: '/home/rloic/IdeaProjects/thesis-code'
 shortcuts:
-  dl_picat: 'python3 {PROJECT}/picat/download.py'
+  download_libraries: 'python3 {PROJECT}/sat/download.py'
   gradle_conf: 'build_exp.gradle'
   gradle_task: 'jar'
   exec: 'Experiment-1.0-SNAPSHOT.jar'
@@ -20,89 +20,83 @@ shortcuts:
   jvm_args: '-Xmx16g -Duser.country=UK -Duser.language=en'
   java: 'java {jvm_args} -cp'
   main_class: 'com.github.rloic.kt.midori.app.concrete.RelatedKeyDifferentialPathSATKt'
-  PICAT_PATH: '{PROJECT}/picat'
+  PROJECT_PATH: '{PROJECT}'
+  PICAT_PATH: '{PROJECT}/sat/Picat'
+  MINIZINC_PATH: '{PROJECT}/sat/MiniZincIDE-2.2.3-bundle-linux'
 versioning:
   repository: https://github.com/rloic/thesis-code
   authentication: true
-  commit: e820197d5cd8f54cf37066adea511723c6d7efa0
-compile: '{dl_picat} && gradle --build-file {PROJECT}/{gradle_conf} {gradle_task}'
+  commit: 268e72ee0d98aea7f271da7b051af286d94fcef2
+compile: '{download_libraries} && gradle --build-file {PROJECT}/{gradle_conf} {gradle_task}'
 execute: '{java} {build}/{exec} {main_class}'
 experiments:
-  - name: "Midori-64_3_3"
-    parameters: [version=Midori-64, r=3, sb=3, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_4_4"
-    parameters: [version=Midori-64, r=4, sb=4, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_5_5"
-    parameters: [version=Midori-64, r=5, sb=5, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_6_6"
-    parameters: [version=Midori-64, r=6, sb=6, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_7_7"
-    parameters: [version=Midori-64, r=7, sb=7, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_8_8"
-    parameters: [version=Midori-64, r=8, sb=8, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_9_9"
-    parameters: [version=Midori-64, r=9, sb=9, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_10_10"
-    parameters: [version=Midori-64, r=10, sb=10, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_11_11"
-    parameters: [version=Midori-64, r=11, sb=11, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_12_12"
-    parameters: [version=Midori-64, r=12, sb=12, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_13_13"
-    parameters: [version=Midori-64, r=13, sb=13, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_14_14"
-    parameters: [version=Midori-64, r=14, sb=14, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_15_15"
-    parameters: [version=Midori-64, r=15, sb=15, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_16_16"
-    parameters: [version=Midori-64, r=16, sb=16, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_17_17"
-    parameters: [version=Midori-64, r=17, sb=17, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_18_18"
-    parameters: [version=Midori-64, r=18, sb=18, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_19_19"
-    parameters: [version=Midori-64, r=19, sb=19, 'PICAT_PATH={PICAT_PATH}']
-  - name: "Midori-64_20_20"
-    parameters: [version=Midori-64, r=20, sb=20, 'PICAT_PATH={PICAT_PATH}']
+  - name: "Midori-64_3_1"
+    parameters: [version=Midori-64, r=3, sb=1, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
+  - name: "Midori-64_4_2"
+    parameters: [version=Midori-64, r=4, sb=2, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
+  - name: "Midori-64_5_2"
+    parameters: [version=Midori-64, r=5, sb=2, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
+  - name: "Midori-64_6_3"
+    parameters: [version=Midori-64, r=6, sb=3, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
+  - name: "Midori-64_7_3"
+    parameters: [version=Midori-64, r=7, sb=3, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
+  - name: "Midori-64_8_4"
+    parameters: [version=Midori-64, r=8, sb=4, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
+  - name: "Midori-64_9_4"
+    parameters: [version=Midori-64, r=9, sb=4, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
+  - name: "Midori-64_10_5"
+    parameters: [version=Midori-64, r=10, sb=5, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
+  - name: "Midori-64_11_5"
+    parameters: [version=Midori-64, r=11, sb=5, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
+  - name: "Midori-64_12_6"
+    parameters: [version=Midori-64, r=12, sb=6, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
+  - name: "Midori-64_13_6"
+    parameters: [version=Midori-64, r=13, sb=6, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
+  - name: "Midori-64_14_7"
+    parameters: [version=Midori-64, r=14, sb=7, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
+  - name: "Midori-64_15_7"
+    parameters: [version=Midori-64, r=15, sb=7, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
+  - name: "Midori-64_16_8"
+    parameters: [version=Midori-64, r=16, sb=8, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_3_3"
-    parameters: [version=Midori-128, r=3, sb=3, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=3, sb=3, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_4_4"
-    parameters: [version=Midori-128, r=4, sb=4, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=4, sb=4, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_5_5"
-    parameters: [version=Midori-128, r=5, sb=5, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=5, sb=5, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_6_6"
-    parameters: [version=Midori-128, r=6, sb=6, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=6, sb=6, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_7_7"
-    parameters: [version=Midori-128, r=7, sb=7, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=7, sb=7, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_8_8"
-    parameters: [version=Midori-128, r=8, sb=8, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=8, sb=8, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_9_9"
-    parameters: [version=Midori-128, r=9, sb=9, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=9, sb=9, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_10_10"
-    parameters: [version=Midori-128, r=10, sb=10, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=10, sb=10, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_11_11"
-    parameters: [version=Midori-128, r=11, sb=11, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=11, sb=11, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_12_12"
-    parameters: [version=Midori-128, r=12, sb=12, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=12, sb=12, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_13_13"
-    parameters: [version=Midori-128, r=13, sb=13, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=13, sb=13, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_14_14"
-    parameters: [version=Midori-128, r=14, sb=14, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=14, sb=14, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_15_15"
-    parameters: [version=Midori-128, r=15, sb=15, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=15, sb=15, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_16_16"
-    parameters: [version=Midori-128, r=16, sb=16, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=16, sb=16, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_17_17"
-    parameters: [version=Midori-128, r=17, sb=17, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=17, sb=17, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_18_18"
-    parameters: [version=Midori-128, r=18, sb=18, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=18, sb=18, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_19_19"
-    parameters: [version=Midori-128, r=19, sb=19, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=19, sb=19, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
   - name: "Midori-128_20_20"
-    parameters: [version=Midori-128, r=20, sb=20, 'PICAT_PATH={PICAT_PATH}']
+    parameters: [version=Midori-128, r=20, sb=20, 'PROJECT_PATH={PROJECT_PATH}', 'PICAT_PATH={PICAT_PATH}', 'MINIZINC_PATH={MINIZINC_PATH}']
 measures: [p] # p = best probability
 stats: [time]
 iterations: 1
 timeout:
-  duration: 24
+  duration: 12
   unit: HOURS
