Ignore tsv results and gradle

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Ignore idea folder
 .idea
 
+# Ignore gradle
+.gradle
+
+# Ignore tsv
+*.tsv
+
 # Ignore account configuration file
 account.yml
 
